# fast_oauth

./: .pre-commit-config.yaml  README.md  pyproject.toml
fast_oauth/: github_oauth.py  main.py  req_oauth.py  settings.py
tests/: test_fast_oauth.py  test_req_oauth.py
